--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,43 @@
 .container {
-  border: 2px solid gray;
-  width: 350px;
+  border: 3px solid rgb(194, 194, 194);
+  padding-left: 5px;
+  padding-bottom: 5px;
+  background-color: rgb(77, 225, 242);
+  width: 320px;
   margin: 0 auto;
   box-shadow: 10px 10px 8px;
   border: groove;
-  padding: 0 0 0 30px
+  border-radius: 5px;
 }
 .container2 {
-  border: 2px solid gray;
+  border: 3px solid rgb(194, 194, 194);
+  width: 297px;
+  background-color: white;
+  border-radius: 5px;
+  padding: inherit;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 img {
+  border: 3px solid rgb(194, 194, 194);
   width: 300px;
+  height: 300px;
   max-width: 100%;
   display: center;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 h3 {
-  font-family: 'Spectral', serif;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 20px;
 }
 span {
   font-weight: bold;
 }
 p {
-  font-family: 'Hind', sans-serif;
+  font-family: 'Amiri', serif;
 }
