--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,10 @@
   font-weight: bold;
 }
 
-.interesting_fact_textinteresting_fact_text {
+.interesting_fact_text {
   font-family: 'Amiri', serif;
 }
 
-ul{
+.list_about_puppy {
   list-style: none;
 }
